--- a/Pathfinder/index.html
+++ b/Pathfinder/index.html
@@ -26,7 +26,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: #000; /* Changed to solid black */
+            background-color: #000;
             color: white;
             display: none;
             justify-content: center;
@@ -104,7 +104,7 @@
     <button id="solve-maze" disabled>Solve Maze</button>
     <button id="reset-pathfinding">Reset Pathfinding</button>
     <button id="reset-maze">Reset Maze</button>
-    <button id="redirect-old-version">Go to Old Version</button> <!-- Added button -->
+    <button id="redirect-old-version">Go to Old Version</button>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const orientationLock = document.getElementById('orientation-lock');
@@ -126,10 +126,10 @@
             const solveMazeButton = document.getElementById('solve-maze');
             const resetMazeButton = document.getElementById('reset-maze');
             const resetPathfindingButton = document.getElementById('reset-pathfinding');
-            const redirectOldVersionButton = document.getElementById('redirect-old-version'); // New button reference
+            const redirectOldVersionButton = document.getElementById('redirect-old-version');
 
             redirectOldVersionButton.addEventListener('click', () => {
-                window.location.href = 'old/index.html'; // Path to the old version
+                window.location.href = 'old/index.html';
             });
 
             function createGrid() {
